# C-code

./: CMakeLists.txt
Array/: 10_Delete_an_Element_from_Array.c  11_Acending_and_Descending_Order_in_array.c  12_Bubble_short.c  13_Insertion_sort.c  14_Selection_Sort.c  15_Linear_Search.c  16_Binary_Search_example.c  17_Simple_matrix_in_array.c  18_Transpose_of_matrix.c  19_Sort_all_Elements_of_D_array_row_wise_haveing_row_and_columns.c  1_Find_sum_of_array.c  20_Sum_of_diagonal_elements_of_a_matrix_in_c.c  2_Print_odd_and_even_numbers_of_an_array_separately.c  3_Find_Maximum_number_from_array.c  4_Reverse_an_array.c  5_Find_how_many_times_a_number_present_in_array.c  6_find_sum_two_array.c  7_Swapping_of_two_arrays.c  8_Count_Number_of_Negative_Positive_and_Zero_Array_Elements.c  9_Insert_an_Element_in_Array.c
Basic/: 02_Printf_Example.c  03_Print_an_integer.c  04_Simple_addition_for_static_value.c  05_Simple_Division_Example.c  06_Addition_Subtraction_multiplication_and_division_Example.c  07_Global_and_Local_variable.c  08_Scanf_Example.c  09_Addition_Example_For_Run_Time_Value_using_scanf.c  10_Subtract_two_numbers_without_using_subtraction-operator.c  11_Find_Squre_root_of_Number.c  12_Find_Gross_salary_Example.c  13_Find_the_Area_Of_circle.c  14_Find_the_volume_of_cube.c  15_Find_a_reaming_Day.c  16_Simple_interst_calculation.c  17_Differenciate_Rupees_And_Paisa_from_total_Rupees.c  18_Swapping_of_two_numbers_using_third_variable.c  19_Swapping_of_two_numbers_without_using_third_variable.c  20_Swapping_of_two_numbers_using_bitwise_XOR_operation.c  (+12 more)
(+284 files in other folders)
